Feet: Added stockdaat

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vibrant-wealth-assist</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>LightSpeed</title>
+    <meta name="description" content="A portfolio management tool for the modern investor." />
+    <meta name="author" content="LightSpeed" />
   </head>
 
   <body>
